force-app/main/default/objects/CreditorOpportunity__c/CreditorOpportunity__c.object-meta.xml
<CustomObject>
    <label>Creditors List</label>
    <nameField>
        <label>Creditor Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Creditors List</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>