force-app/main/default/objects/CreditorOpportunity__c/fields/Account_Bank_Information__c.field-meta.xml
<CustomField>
    <fullName>Account_Bank_Information__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Bank Information</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account_Bank_Information__c.Account__c</field>
            <operation>equals</operation>
            <valueField>$Source.CreditorAccount__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account_Bank_Information__c</referenceTo>
    <relationshipLabel>Creditors List</relationshipLabel>
    <relationshipName>Creditors_List</relationshipName>
    <type>Lookup</type>
</CustomField>