force-app/main/default/objects/CreditorOpportunity__c/fields/Active_Plan__c.field-meta.xml
<CustomField>
    <fullName>Active_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Active Plan</label>
    <referenceTo>Settlement_Plan_Draft__c</referenceTo>
    <relationshipLabel>Creditors List</relationshipLabel>
    <relationshipName>Creditors_List</relationshipName>
    <type>Lookup</type>
</CustomField>