force-app/main/default/objects/CreditorOpportunity__c/fields/Avg_Settlement_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Avg_Settlement_Percentage__c</fullName>
    <description>Historical average settlement %</description>
    <label>Avg Settlement %</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>