force-app/main/default/objects/CreditorOpportunity__c/fields/Commission_Fee__c.field-meta.xml
<CustomField>
    <fullName>Commission_Fee__c</fullName>
    <defaultValue>35</defaultValue>
    <description>Per-payment commission fee</description>
    <label>Commission Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>