force-app/main/default/objects/CreditorOpportunity__c/fields/Creditor__c.field-meta.xml
<CustomField>
    <fullName>Creditor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Creditor (OLD)</label>
    <referenceTo>Creditor__c</referenceTo>
    <relationshipLabel>Creditors List</relationshipLabel>
    <relationshipName>CreditorOpportunitys</relationshipName>
    <type>Lookup</type>
</CustomField>