force-app/main/default/objects/CreditorOpportunity__c/fields/CreditorAccount__c.field-meta.xml
<CustomField>
    <fullName>CreditorAccount__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Creditor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Creditors List</relationshipLabel>
    <relationshipName>Creditors_List</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>