force-app/main/default/objects/CreditorOpportunity__c/fields/EPPS_Name__c.field-meta.xml
<CustomField>
    <fullName>EPPS_Name__c</fullName>
    <formula>Opportunity__r.Account.Account_Holder_Name__c &amp; &quot; &quot; &amp;
Opportunity__r.Account.Account_Holder_Last_Name__c &amp; &quot; - (&quot; &amp;
Opportunity__r.Account.EPPS_ID__c &amp; &quot;)&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EPPS Name</label>
    <type>Text</type>
</CustomField>