force-app/main/default/objects/CreditorOpportunity__c/fields/Escrow_Start_Balance__c.field-meta.xml
<CustomField>
    <fullName>Escrow_Start_Balance__c</fullName>
    <description>Client escrow balance at plan start</description>
    <label>Escrow Start Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>