force-app/main/default/objects/CreditorOpportunity__c/fields/Max_Payment_Term_Months__c.field-meta.xml
<CustomField>
    <fullName>Max_Payment_Term_Months__c</fullName>
    <description>Maximum months creditor allows for payment</description>
    <label>Max Payment Term (Months)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>