force-app/main/default/objects/CreditorOpportunity__c/fields/Number__c.field-meta.xml
<CustomField>
    <fullName>Number__c</fullName>
    <displayFormat>C-{000000}</displayFormat>
    <label>Number</label>
    <type>AutoNumber</type>
</CustomField>