force-app/main/default/objects/CreditorOpportunity__c/fields/Settlement_Contact__c.field-meta.xml
<CustomField>
    <fullName>Settlement_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contact at creditor for settlement matters</description>
    <label>Settlement Contact</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.CreditorAccount__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Creditors List</relationshipLabel>
    <relationshipName>Creditors_List</relationshipName>
    <type>Lookup</type>
</CustomField>