force-app/main/default/objects/CreditorOpportunity__c/fields/Settlement_ID__c.field-meta.xml
<CustomField>
    <fullName>Settlement_ID__c</fullName>
    <label>Settlement ID</label>
    <type>TextArea</type>
</CustomField>