force-app/main/default/objects/CreditorOpportunity__c/fields/Settlement_Memo__c.field-meta.xml
<CustomField>
    <fullName>Settlement_Memo__c</fullName>
    <description>Notes and terms for settlement</description>
    <label>Settlement Memo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>