force-app/main/default/objects/CreditorOpportunity__c/fields/Total_Payback__c.field-meta.xml
<CustomField>
    <fullName>Total_Payback__c</fullName>
    <label>Total Payback</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>